--- a/childrenBook.html
+++ b/childrenBook.html
@@ -7,6 +7,7 @@
 	<body>
 		<header>
 			<h1>Children's Story Book on Mental Health</h1>
+			<p>An InternHacks Project</p>
 		</header>
 	</body>
 </html>
