--- a/childrenBook.html
+++ b/childrenBook.html
@@ -9,5 +9,20 @@
 			<h1>Children's Story Book on Mental Health</h1>
 			<p>An InternHacks Project</p>
 		</header>
+
+		<nav>
+			<ul>
+				<li><a href="about.html">About</a></li>
+				<li><a href="team.html">Team</a></li>
+				<li><a href="https://internhacks.com/for-students/">InternHacks</a></li>
+			</ul>
+		</nav>
+
+		<main>
+			<section>
+				<h2>Story Book on Mental Health</h2>
+			</section>
+		</main>
+
 	</body>
 </html>
