--- a/childrenBook.html
+++ b/childrenBook.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Children's Mental Health Book</title>
+		<link rel="stylesheet" type="text/css" href="childStyle.css">
 	</head>
 	<body>
 		<header>
