--- a/team.html
+++ b/team.html
@@ -25,16 +25,27 @@
           <header>
             <h3>Vanessa Martinez Montero</h3>
             <p>Software Engineer</p>
-            <br></br>
+            <br>
 
             <h3>Jessica Contreras</h3>
             <p>Product Manager</p>
-            <br></br>
+            <br>
 
             <h3>Carlos Manrique Ucharico</h3>
             <p>Software Engineer</p>
-            <br></br>
-            
+            <br>
+
+            <h3>Daniela Castro</h3>
+            <p>Designer</p>
+            <br>
+
+            <h3>Garvin Mo Zhen</h3>
+            <p>Software Engineer</p>
+            <br>
+
+            <h3>Justin Baltazar</h3>
+            <p>Software Engineer</p>
+
           </header>
         </article>
 			</section>
