--- a/childrenBook.html
+++ b/childrenBook.html
@@ -15,7 +15,7 @@
 			<ul>
 				<li><a href="about.html">About</a></li>
 				<li><a href="team.html">Team</a></li>
-				<li><a href="https://internhacks.com/for-students/">InternHacks</a></li>
+				<li><a href="https://www.linkedin.com/company/internhacks/about/">InternHacks</a></li>
 			</ul>
 		</nav>
 
