--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 			<ul>
 				<li><a href="about.html">About</a></li>
 				<li><a href="team.html">Team</a></li>
-				<li><a href="https://internhacks.com/for-students/">InternHacks</a></li>
+				<li><a href="https://www.linkedin.com/company/internhacks/about/">InternHacks</a></li>
 			</ul>
 		</nav>
 
@@ -22,7 +22,7 @@
 			<section>
 				<h2>About</h2>
         <p>This storybook is a project our team has been working on for
-          <a href="https://internhacks.com/for-students/">InternHacks</a>
+          <a href="https://www.linkedin.com/company/internhacks/about/">InternHacks</a>
         2021. Our mission is to bring light to mental health issues in a way
       that is both appropriate and easy enough for children to understand.</p>
 			</section>
