--- a/childrenBook.html
+++ b/childrenBook.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>Children's Mental Health Book</title>
 		<link rel="stylesheet" type="text/css" href="childStyle.css">
 	</head>
